# RLHF-Gym

./: .gitignore  AlgorithmOverview.md  Documentation.md  README.md  Slurm_Instructions.md  evaluate.py  interactive_slurm_job.sh  main.py  pyproject.toml  pyproject_old.toml  requirements.txt  sac_continuous_action.py  shared.py  synthetic_job_script.sh
Documentation/README/: README.md
app/: __init__.py  routes.py  utils.py
app/static/: index2.css  script.js
app/templates/: index2.html
backend/flask_app_server/: server.py
backend/flask_app_server/static/: index2.css  script.js
backend/flask_app_server/templates/: index2.html
backend/rlhf/: args.py  buffer.py  environment.py  flow.txt  intrinsic_reward.py  networks.py  preference_predictor.py  render.py  test.py  testcuda.py  train.py
backend/rlhf/utils/: __init__.py  evaluate.py  surf.py
models/Hopper-v5__RLHF_Agent__1__1738767442/: actor.pth
models/Hopper-v5__RLHF_Agent__1__1738767836/: actor.pth
rlhf/: args.py  pebble.py  render.py  testcuda.py
rlhf-backend/flask/: Member.py  server.py
rlhf-backend/flask/static/: index2.css  script.js
rlhf-backend/flask/templates/: index2.html
rlhf-backend/rlhf/: args.py  buffer.py  environment.py  generate_video.py  main.py  networks.py  preference_predictor.py  render.py  sac_continuous_action.py  testcuda.py  train.py  traj.py
rlhf-frontend/frontend-react/: index.html  package-lock.json  package.json
rlhf-frontend/frontend-react/src/: App.css  App.tsx  VideoPlayer.tsx  index.css
rlhf/buffers/: __init__.py  preference_buffer.py  replay_buffer.py  sampler.py
rlhf/environment/: __init__.py  utils.py
rlhf/networks/: __init__.py  actor.py  critic.py  reward_networks.py  utils.py
rlhf/rendering/: evaluate.py  gym_renderer.py
rlhf/training/: __init__.py  feedback_handler.py  intrinsic_reward.py  pebble.py  reward_learning.py  surf.py
slurm/: Slurm_Instructions.md  interactive_slurm_job.sh  synthetic_job_script.sh
