[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sep-groupb"
version = "0.1.0"
description = "Reinforcement Learning from Human Feedback Framework"
authors = [
    {name = "Malik Durmus", email = "malikdurmus2@gmail.com"},
    {name = "Tobias Huber"},
    {name = "Aleksandar Mijatovic"},
    {name = "Thang Long Nguyen"},
    {name = "Martin Plank"}
]
readme = "README.md"
# === MOVED PYTHON VERSION HERE ===
requires-python = ">=3.12,<3.14"


# === MOVED DEPENDENCIES HERE IN A LIST FORMAT ===
dependencies = [
    "tensorboard>=2.10.0",
    "wandb>=0.13.11",
    "torch==2.3.0",
    "gymnasium[mujoco]>=1.0.0",
    "moviepy==1.0.3",
    "pygame>=2.6.1",
    "rich<12.0",
    "tenacity>=8.2.2",
    "tyro>=0.5.10",
    "numpy>=1.24.0",
    "flask>=2.0.0,<3.0.0",
    "flask-cors>=5.0.0",
    "imageio-ffmpeg>=0.5.1",
    "tqdm>=4.67.1",
    "stable-baselines3>=2.4.0",
    "flask-socketio>=5.5.0",
    "pyinstaller>=6.11.1",
    "mujoco>=3.1.5",
    "imageio>=2.34.1",
    #Optionals
    "AutoROM[accept-rom-license]~=0.4.2; extra == 'optional'",
    "opencv-python>=4.6.0.66; extra == 'optional'",
    "pytest>=7.1.3; extra == 'optional'",
    "openrlbenchmark>=0.1.1b4; extra == 'optional'",
    "jax==0.4.8; extra == 'optional'",
    "jaxlib==0.4.7; extra == 'optional'",
    "flax==0.6.8; extra == 'optional'",
    "optuna>=3.0.1; extra == 'optional'",
    "optuna-dashboard>=0.7.2; extra == 'optional'",
    "shimmy>=1.1.0; extra == 'optional'",
    "dm-control>=1.0.10; extra == 'optional'",
    "h5py>=3.7.0; extra == 'optional'",
    "optax==0.1.4; extra == 'optional'",
    "chex==0.1.5; extra == 'optional'",
]


[tool.poetry]
packages = [
    { include = "app"},
    { include = "rlhf"}
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"